fix container visiblility

--- a/pocket/style.css
+++ b/pocket/style.css
@@ -19,6 +19,7 @@ body {
 }
 
 .container {
+  display: block;
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
